# templates

./: .gitignore
c/: .clang-format
c/cmake/: FindCGLM.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindSDL2.cmake  complete_project.cmake  executable.cmake  library.cmake  macros.cmake
c/lib/: types.h
c/src/algo_visual/: main.c
cpp/: CMakeLists.txt
cpp/cmake/: FindGLAD.cmake  complete_project.cmake  executable.cmake  library.cmake
cpp/new_cmake_dep/build_systems/: CMakeLists.txt
cpp/new_cmake_dep/build_systems/cmake/: FindCGLM.cmake  FindGLAD.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSDL2.cmake  FindSFML.cmake  FindSFML_Backup.cmake  FindWin32.cmake  binary.cmake  complete_project.cmake  library.cmake  macros.cmake
cpp_new/: .clang-format  .clang-tidy  .cmake-format.yml  .gitignore  CMakeLists.txt
cpp_new/cmake/: BaseProject.cmake  Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  FindCGLM.cmake  FindGDI32.cmake  FindGLAD.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSDL2.cmake  FindSFML.cmake  FindWin32.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
cpp_new/include/common/: lib.hh
cpp_new/src/: main.cc
rust/: .codecov.yml  .gitlab-ci.yml  Cargo.toml
rust/src/: main.rs
rust/src/logging/: errors.rs  mod.rs
scripts/c_cpp_build/: pyproject.toml
scripts/c_cpp_build/c_cpp_build/: main.py
scripts/c_cpp_build/c_cpp_build/core/: builder.py  parser.py  types.py
scripts/c_cpp_build/c_cpp_build/utils/: commands.py  config.py  logger.py  rand.py
scripts/c_cpp_build/test_project/: project.json
scripts/c_cpp_build/test_project/modules/: sdl2.json
